# P5_OCR

./: Notebook_1_exploration.ipynb  Notebook_2_essais.ipynb  README.md  fct_projet_5.py  pyproject.toml
