[tool.poetry]
name = "projet 5 ocr"
version = "0.1.0"
description = "Environnement virtuel projet 5 - OpenClassrooms"
authors = ["maxsch38"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
SciPy = "^1.11.4"
seaborn = "^0.13.0"
ipykernel = "^6.28.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
